--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -23,10 +23,4 @@ dist-ssr
 *.sln
 *.sw?
 
-# Playwright
-/test-results/
-/playwright-report/
-/blob-report/
-/playwright/.cache/
-testing files.zip
-testing files
+.env
