--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "test:watch": "vitest watch",
     "coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test --ui"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
