--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,10 @@
 PORT=4000
-MONGO_URI=mongodb+srv://mohangarnepudi2001:ocm1JrZgXkZCqXxg@ai.0dreufk.mongodb.net/?retryWrites=true&w=majority&appName=ai
+MONGO_URI=mongodb://localhost:27017/finance
 JWT_SECRET=hnc8udbvn8eyb247hbcuh
 PLAID_CLIENT_ID=67f9254f838d42001f525b43
 PLAID_SECRET=cd13b85fe653f439efb9d632a013c4
 PLAID_ENV=sandbox
 GEMINI_API_KEY=AIzaSyA27SYU6kP1M8YaB1QhsKxuSjZcF0mYnBs
+MODE_ENVIROMENT=dev
+EMAIL_USER=vidyadhar.challa3@gmail.com
+EMAIL_PASS=ezqp qoyv oexz newr
