Initial commit with frontend and backend files

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,10 @@
 PORT=4000
-MONGO_URI=mongodb+srv://mohangarnepudi2001:ocm1JrZgXkZCqXxg@ai.0dreufk.mongodb.net/?retryWrites=true&w=majority&appName=ai
+MONGO_URI=mongodb+srv://shwetaar1607:M37MHwRwFrTqLk6i@cluster0.d5u4j2m.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=hnc8udbvn8eyb247hbcuh
-PLAID_CLIENT_ID=67f9254f838d42001f525b43
-PLAID_SECRET=cd13b85fe653f439efb9d632a013c4
+PLAID_CLIENT_ID=6801a19e225ff7002269a386
+PLAID_SECRET=2a29a04a2a5d3e5078eb16d35836fd
 PLAID_ENV=sandbox
-GEMINI_API_KEY=AIzaSyA27SYU6kP1M8YaB1QhsKxuSjZcF0mYnBs
+GEMINI_API_KEY=AIzaSyDiWmDWG_N3T0MQNkTopyetFY5gMIe9P2c
+MODE_ENVIROMENT=dev
+EMAIL_USER=shwetaar1607@gmail.com
+EMAIL_PASS=onxk vzyl spuw oxck
